--- a/README.asciidoc
+++ b/README.asciidoc
@@ -11,8 +11,8 @@ Thank you very much tarruda! I appreciate the zsh-autosuggestions's codes a lot.
 ////
 ////
 
-.zrv.zsh demo (link:https://www.youtube.com/watch?v=AfPgznZvBr8h[https://www.youtube.com/watch?v=AfPgznZvBr8h]):
-image:https://img.youtube.com/vi/AfPgznZvBr8/mqdefault.jpg["zrv.zsh", width=320, link="https://www.youtube.com/watch?v=AfPgznZvBr8"]
+.zrv.zsh demo (link:http://www.youtube.com/watch?v=AfPgznZvBr8h[http://www.youtube.com/watch?v=AfPgznZvBr8h]):
+image:https://img.youtube.com/vi/AfPgznZvBr8/mqdefault.jpg["zrv.zsh", width=320, link="http://www.youtube.com/watch?v=AfPgznZvBr8"]
 
 Usage
 -----
